--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "keywords": [
-    "react",
-    "expo",
-    "template",
-    "nativebase"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "native-base": "3.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "bugs": {
-    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
-  },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
-  "private": true
+    "name": "frontend",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^13.0.0",
+        "@expo/webpack-config": "^18.0.1",
+        "@react-native-async-storage/async-storage": "^1.18.1",
+        "@react-navigation/drawer": "^5.12.9",
+        "@react-navigation/native": "^6.1.6",
+        "@react-navigation/native-stack": "^6.9.12",
+        "@reduxjs/toolkit": "^1.9.5",
+        "axios": "^1.4.0",
+        "expo": "~48.0.15",
+        "expo-image-picker": "^14.1.1",
+        "expo-status-bar": "~1.4.4",
+        "mime": "^3.0.0",
+        "native-base": "^3.4.28",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.71.7",
+        "react-native-gesture-handler": "^2.9.0",
+        "react-native-modal": "^13.0.1",
+        "react-native-reanimated": "~2.14.4",
+        "react-native-safe-area-context": "4.5.0",
+        "react-native-screens": "^3.20.0",
+        "react-native-svg": "13.4.0",
+        "react-native-swiper": "^1.6.0",
+        "react-native-vector-icons": "^9.2.0",
+        "react-native-web": "~0.18.10",
+        "react-redux": "^8.0.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0"
+    },
+    "private": true
 }
